--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -454,7 +454,7 @@ nav {
     width: 30%;
     border-top: 5px solid $midgreen;
     background-color: #f1f1f1;
-    padding:2em;
+    padding:2%;
     font-size:18px;
     text-align: center;
     display:flex; 
@@ -1392,106 +1392,46 @@ nav {
 
 
 
-//tablets, large phones
-@media (min-width: 601px) and (max-width: 1200px) {
+
+@media only screen and (max-width: 1200px) {
 
 
-
-  div.container {
-    max-width: 1200px;
-    padding-left: 5%;
-    padding-right: 5%;
-
-  }
-
-
-  .quicklink {
-    text-align: center;
-    color: #000;
-    font-family: "Jost", sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 180%; /* 28.8px */
-    border-top: 5px solid #124D20;
-    padding-bottom: 2%;
-  }
-
-  .quicklink-text {
-    padding: 10%;
-    height: 20vw;
-    font-size: 100%;
-  }
-
-  .quicklink-spacer {
-    margin-right: 3%;
-  }
-
-  div.logo {
-    width: 20%;
-  }
-
-  div.logo.kcl-logo img {
-    width: 80%;
-  }
-
-  div.logo img {
-    width: 80%;
-    height: auto;
-    display: block;
-    margin: auto;
-  }
-  .footer-credits {
-    font-size: 80%;
-
-  }
-}
-
-@media only screen and (min-width: 1601px) {
-  .quicklink-text {
-
-    font-size: 120%;
-  }
-
-}
-
-@media only screen and (min-width: 1201px) {
-  .home-hero {
-    width: auto;
-    background: url('../img/homepage-hero-1920.jpg') lightgray -0.36px 0px / 100.056% 121.087% no-repeat;
-    background-size: cover;
-    min-height: 40vw;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .quicklink-text {
-    padding: 10%;
-    height: 10vw;
-
-  }
-
-  .quicklink-spacer {
-    margin-right: 5%;
-  }
 
 }
 
 
 // Mobile changes
 @media only screen and (max-width: 600px) {
-  .home-hero {
-    width: auto;
-    background: url('../img/homepage-hero-600.jpg') lightgray -0.36px 0px / 100.056% 121.087% no-repeat;
-    background-size: cover;
-    min-height: 30vw;
-    display: flex;
-    align-items: center;
+
+  .home-hero{
+    max-height:100vh;
+    height:100vh;
+    .info-box {
+      width:95%;
+      font-size: 16px;
+      max-width: 95%;
+      min-width:0;
+      padding: 5vh 4%;
+      a button{
+        font-size: 16px;
+        padding: 0.6em 1em;
+      }
+    }
   }
 
-  .info-box {
-    line-height: 150%;
-    font-size: 14px;
+  .home-section{
+    display:block;
+    .card{
+      width:95%;
+      margin:4% auto;
+      font-size: 16px;
+      padding: 5vh 2%;
+      a button{
+        font-size: 16px;
+        padding: 0.6em 1em;
+        margin-top:5vh;
+      }
+    }
   }
 
   a#sitetitle {
