fix: footer styles

--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -1,6 +1,6 @@
 <footer>
     <div class="logos">
-        <h4>Partners and Funders</h4>
+        <h4>Partners <span>&</span> Funders</h4>
         <div class="logo">
             <a href="//kdl.kcl.ac.uk/">
                 {% image "assets/img/logos/KCL.png", "King's College London logo", "300, 600" %}
@@ -19,9 +19,9 @@
     </div>
     <div class="info">
         <ul>
-            <li>©2024 Brightening the Covenant Chain</li>
-            <li><a href="{{ "/accessibility" | url }}">Accessibility Statement</a><li>
+            <li><a href="{{ "/accessibility" | url }}">Accessibility Statement</a></li>
             <li><a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a></li>
+            <li>©2024 Brightening the Covenant Chain</li>
         </ul>
     </div>
 </footer>
