--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -448,15 +448,15 @@ nav {
     z-index: 99;
     pointer-events: auto;
     background: lighten(lightgray, 12%);
-    height: 3.5em;
-    top: 5%;
+    top: 0;
     border-bottom: 0;
     position: fixed;
-    width: 60%;
-    margin: 0 20%;
+    width: calc(90% - 80px);
+    margin: 0 auto;
     border: 1px solid $midgreen;
-    border-top: 0;
-
+    border-top: 1px solid transparent;
+    position: sticky;
+    top: 0;
     > ol {
       //1st level
       //counter-reset: li;
@@ -482,7 +482,7 @@ nav {
         &:nth-child(1),
         &:nth-child(7) {
           a {
-            font-size: 0.9em;
+            font-size: 16px;
             line-height: 1.5;
           }
         }
@@ -495,11 +495,11 @@ nav {
           line-height: 1;
           margin-top: -0.9em;
           text-transform: uppercase;
-          font-size: 1.2em;
+          font-size: 16px;
           //@include transition(all 300ms ease-in);
           span {
             display: block;
-            font-size: 0.6em;
+            font-size: 14px;
             text-transform: none;
           }
 
@@ -597,11 +597,14 @@ nav {
             margin: 0;
             padding: 0;*/
   section {
-    width: 100%;
+    width: 100vw;
     position: relative;
     margin: 0;
     padding: 0 24px;
 
+    &:first-of-type{
+      margin-top:25vw;
+    }
     h1 a {
       margin-top: 10em;
       font-size: 1.7em;
@@ -615,17 +618,20 @@ nav {
     }
 
     article {
-      width: 70%;
+      width:calc(1550px - 50vw);
+      min-width:550px; /* let's have a minimum boundary */
+      max-width:100%; /* and a maximum boundary */
+      margin:auto;
       background: rgba(255, 255, 255, 0.9);
       padding: 16px 32px;
-      margin: 0 15% 0 15%;
       text-align: justify;
-
+      box-shadow: 1px 1px 1px lightgray;
+      font-size: 20px;
       blockquote {
         p {
           font-style: italic;
           line-height: 1.3;
-          font-size: 1.1em;
+          font-size: 20px;
           border-left: 0.5em solid lighten($seafoam, 10%);
           padding-left: 0.5em;
         }
