fix: change explore id

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -101,7 +101,7 @@ layout: base.liquid
         {% renderFile "./stories/lines.md", "liquid" %}
     </section>
 
-    <section id="filters" class="sectionContainer">
+    <section id="s6-end" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s6-start"></div>
         <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
