fix: map navigation responsive

--- a/frontend/_includes/stories_backup.liquid
+++ b/frontend/_includes/stories_backup.liquid
@@ -85,7 +85,7 @@ layout: base.liquid
     </section>
 
 
-    <section id="filters">
+    <section id="s6-end">
         <article class="storyTitle">
             <h2>Explore</h2>
         </article>
