--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -423,7 +423,7 @@ nav {
 #basemap {
   z-index: 0 !important;
   position: fixed;
-  height: 100vh;
+  height: calc(100vh - 40px);
   width: 100%;
   //.leaflet-map-pane
 }
@@ -1548,6 +1548,7 @@ footer{
       padding: 0 1%;
       article{
         font-size:16px;
+        padding: 16px 3%;
         &.storyTitle {
           padding: 20px 2%;
           h2{
@@ -1556,6 +1557,9 @@ footer{
         }
       }
       }
+    }
+    img{
+      padding:0;
     }
   }
 }//@media only screen and (max-width: 300px) 
