feat: reduce filter icon size

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -131,7 +131,7 @@ layout: base.liquid
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
             </header>
-            <ol>
+            <ol class="maps">
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
                            class="map_selector" id="mapcheckbox1"/>
                     <label for="mapcheckbox1">
@@ -199,7 +199,7 @@ layout: base.liquid
                 <label for="selectallFeatures">Select All</label></span>
             </header>
 
-            <ol>
+            <ol class="icons">
 
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":4, "identity":[2]}'
