--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -999,7 +999,11 @@ nav {
         list-style-type: none;
         max-width: auto;
         margin-left: -40px;
-
+        &.icons{
+          li img{
+            width:15px;
+          }
+        }
         li {
           margin-bottom: 4px;
 
