feat: reduce legend span text size

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -313,37 +313,37 @@ layout: base.liquid
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
-    <td>Settlement (Indigenous)</td>
+    <td>Settlement <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
-    <td>Settlement (European)</td>
+    <td>Settlement <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
-    <td>Placename (Indigenous)</td>
+    <td>Placename <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
-    <td>Placename (European)</td>
+    <td>Placename <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
-    <td>Annotation (Indigenous-related)</td>
+    <td>Annotation <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
-    <td>Annotation (Haudenosaunee-related)</td>
+    <td>Annotation <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
-    <td>Annotation (European-related)</td>
+    <td>Annotation <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
