--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -54,7 +54,7 @@
     </div>
 <div class="w3-row w3-padding-small w3-hide-medium w3-hide-large">
     <div class="footer-credits">
-            ©2024 Brightening the Covenant Chain <a href="{{ "/accessibility" | url }}">Accessibility Statement</a>
+            ©2024 Brightening the Covenant Chain <a href="{{ "/accessibility/" | url }}">Accessibility Statement</a>
             <a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a>
         </div>
 
