ux explore filter issues draft

--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -34,7 +34,7 @@ layout: base.liquid
                 <p>
                     Select historical map sources and choose what features to display.
                 </p>
-                <a href="{{ "stories/#s6-end" | url }}"><button>Explore</button></a>
+                <a href="{{ "stories/#s-6" | url }}"><button>Explore</button></a>
             </div>
 
             <div class="card">
