--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -39,7 +39,7 @@ layout: base.liquid
             <li><a class="overviewLink" href="#s-4" data-slideId="800">4<span>Villagers, Settlers</span></a></li>
             <li><a class="overviewLink" href="#s-5" data-slideId="900">5<span>Lines</span></a></li>
             <!--  -->
-            <li><a class="overviewLink" href="#s6-end" data-slideId="1000">Explore </a></li>
+            <li><a class="overviewLink" href="#s-6" data-slideId="1000">Explore </a></li>
         </ol>
     </nav>
 
@@ -101,7 +101,7 @@ layout: base.liquid
         {% renderFile "./stories/lines.md", "liquid" %}
     </section>
 
-    <section id="s6-end" class="sectionContainer">
+    <section id="s-6" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s6-start"></div>
         <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
@@ -110,13 +110,15 @@ layout: base.liquid
             </p>
         </article>
 
-        <div id="s6-end" class="article_spacer">&nbsp;</div>
+        <div id="s-6-end" >&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
+    </section>
+    <section id="s-7" class="sectionContainer">
     </section>
 </div>
 
 <div id="filter-wrapper">
-    <a href="#s6-end"></a>
+    <a href="#s-7"></a>
     <input type="checkbox" id="filter">
     <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
         <h2>Filter</h2>
