--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -312,6 +312,7 @@ nav {
   align-items: center;
   height: 70vw;
   max-height:50vh;
+  min-height:40px;
   display: flex;
   align-items: center;
   justify-content: center;
