--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,7 @@ nav {
   align-items: center;
   height: 70vw;
   max-height: 50vh;
+  min-height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
