--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -886,10 +886,13 @@ nav {
   margin-left: -40px;
 }
 #filter-wrapper .content section ol.icons li img {
-  width: 15px;
+  width: 18px;
+  height: 18px;
+  margin-bottom: 6px;
 }
 #filter-wrapper .content section ol li {
   margin-bottom: 4px;
+  border: 1px solid white;
 }
 #filter-wrapper .content section ol li label {
   display: block;
@@ -914,7 +917,7 @@ nav {
   margin-right: 8px;
 }
 #filter-wrapper .content section ol li:hover {
-  background: #e0e0e0;
+  background: #dddddd;
   opacity: 0.9;
 }
 #filter-wrapper .content section ol input[type=checkbox][id^=checkbox] {
@@ -924,14 +927,11 @@ nav {
   display: none;
 }
 #filter-wrapper .content section ol :checked + label {
-  font-weight: bold;
-  background: #132b19;
-  color: white;
+  background: #f2f2f2;
+  border: 1px solid #132b19;
 }
 #filter-wrapper .content section ol :checked + label img {
-  border: 1px solid #124d20;
   opacity: 1;
-  background: white;
 }
 #filter-wrapper section:first-of-type ol li {
   position: relative;
