feat: add description icon and label to legend

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -249,7 +249,7 @@ layout: base.liquid
                            data-filtervalue='{"sub_type":11, "identity":[2]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="{{ '/assets/img/stories/region_turquoise.webp' | url }}" alt=""/><span>Other indigenous related annotations</span>
+                        <img style="opacity:0.3" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}" alt=""/><span>Other indigenous related annotations</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -263,14 +263,14 @@ layout: base.liquid
                            data-filtervalue='{"sub_type":14, "identity":[0]}'
                            class="explore_filter" id="checkbox9"/>
                     <label for="checkbox9">
-                        <img src="{{ '/assets/img/stories/region_purple.webp' | url }}" alt=""/><span>Colonial domains</span>
+                        <img style="opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}" alt=""/><span>Colonial domains</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":7, "identity":[0]}'
                            class="explore_filter" id="checkbox10"/>
                     <label for="checkbox10">
-                        <img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Descriptions</span>
+                        <img style="opacity:0.5" src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}" alt=""/><span>Descriptions</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -351,6 +351,11 @@ layout: base.liquid
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
     <td>Colonial domain</td>
+  </tr>
+  <tr>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;opacity:0.5" src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}"></img></td>
+    <td>Descriptions</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
@@ -453,3 +458,4 @@ layout: base.liquid
 
 </body>
 </html>
+
