--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -1,4 +1,3 @@
-
 //Colours
 $darkgreen: #132b19;
 $midgreen: #124d20;
@@ -1280,7 +1279,7 @@ nav {
     @include transition(all 400ms ease-in);
     background: white;
     padding: 15px 0 8px 0;
-    height: 360px;
+    height: 440px;
     margin: auto;
     border: 1px solid $midgreen;
     img{
@@ -1290,6 +1289,9 @@ nav {
       span{
         font-size:14px;
         font-style: italic;
+      }
+      tr{
+        line-height: 1.7;
       }
     }
   }
